add builder and endpoint health
